tests/baselines/reference/parserEmptyParenthesizedExpression1.errors.txt
==== tests/cases/compiler/parserEmptyParenthesizedExpression1.ts (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! parserEmptyParenthesizedExpression1.ts(2,5): error TS1003: Identifier expected.
    }